--- a/Slike/simulink-pa-10.tex
+++ b/Slike/simulink-pa-10.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
-	\includegraphics[scale=0.5]{./Slike/simulink-pa-10.eps}
-	\caption{Signal napake pri sledenju kro\v{z}nici}
+	\includegraphics[scale=1]{./Slike/simulink-pa-10.eps}
+	\caption{\simulink blok PA-10 CONTROL za vodenje robota PA-10.}
 	\label{fig:simulink-pa-10}
 \end{figure}
