--- a/Slike/admitance_control.tex
+++ b/Slike/admitance_control.tex
@@ -1,6 +1,6 @@
 \begin{figure}[!h]
 	\centering
-	\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/admitance_control.eps}
-	\caption{Koncept \simulink sheme za admitan\v{c}no vodenje po referen\v{c}ni sili.}
+	\includegraphics[trim={0 0cm 0 0cm},scale=0.25]{./Slike/admitance_control.png}
+	\caption{\simulink shema regulatorja sile in pozicije za admitan\v{c}no vodenje.}
 	\label{fig:admitance_control}
 \end{figure}
