--- a/Slike/follow_ramp_tq.tex
+++ b/Slike/follow_ramp_tq.tex
@@ -1,13 +1,13 @@
 \begin{figure}
 	\centering
-	\subfigure[Sledenje sinusnemu signalu pri vzor\v{c}nem \v{c}asu 100 Hz.]
+	\subfigure[Sledenje pozicijskemu signalu trapezne oblike pri vzor\v{c}ni frekvenci 100 Hz.]
 	{
 		\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/follow_ramp_100hz_tq_err.eps}
 	}
-	\subfigure[Sledenje sinusnemu signalu pri vzor\v{c}nem \v{c}asu 500 Hz.]
+	\subfigure[Sledenje pozicijskemu signalu trapezne oblike pri vzor\v{c}ni frekvenci 500 Hz.]
 	{
 		\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/follow_ramp_500hz_tq_err.eps}
 	}
-	\caption{Odziv vrha po \textit{x} osi na signal sinusne oblike s spreminjajo\v{c}o se frekvenco za vzor\v{c}ni \v{c}as 100 Hz in 500 Hz.}
-	\label{fig:torque_follow_sine}
+	\caption{Odziv vrha robota po \textit{z} osi na signal pozicije trapezne oblike pri dveh razli\v{c}nih končnih hitrostih za vzor\v{c}no frekvenco pri navornem vodenju.}
+	\label{fig:follow_ramp_tq}
 \end{figure}
