--- a/Slike/follow_ramp_vel.tex
+++ b/Slike/follow_ramp_vel.tex
@@ -1,13 +1,13 @@
-\begin{figure}[!ht]
+\begin{figure}[!h]
 	\centering
-	\subfigure[Sledenje signalu rampe pri vzor\v{c}nem \v{c}asu 100 Hz.]
+	\subfigure[Sledenje pozicijskemu signalu trapezne oblike pri vzor\v{c}ni frekvenci 100 Hz.]
 	{
 		\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/follow_ramp_100hz_vel_err.eps}
 	}
-	\subfigure[Sledenje signalu rampe pri vzor\v{c}nem \v{c}asu 500 Hz.]
+	\subfigure[Sledenje pozicijskemu signalu trapezne oblike pri vzor\v{c}ni frekvenci 500 Hz.]
 	{
 		\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/follow_ramp_500hz_vel_err.eps}
 	}
-	\caption{Odziv vrha po \textit{z} osi na signal rampe pri dveh razli\v{c}nih hitrostih za vzor\v{c}ni \v{c}as 100 Hz in 500 Hz.}
+	\caption{Odziv vrha robota po \textit{z} osi na signal pozicije trapezne oblike pri dveh razli\v{c}nih kon\v{c}nih hitrostih za vzor\v{c}no frekvenco 100 Hz in 500 Hz pri hitrostnem vodenju.}
 	\label{fig:follow_ramp_vel}
 \end{figure}
