--- a/Slike/jr3_calibration.tex
+++ b/Slike/jr3_calibration.tex
@@ -1,6 +1,6 @@
-\begin{figure}
+\begin{figure}[!h]
 	\centering
-	\includegraphics[scale=1]{./Slike/jr3_calibration.png}
+	\includegraphics[scale=0.5]{./Slike/jr3_calibration.png}
 	\caption{Uporabni\v{s}ki vmesnik v okolju \matlab za identifikacijo parametrov prijemala.}
 	\label{fig:jr3_calibration}
 \end{figure}
