--- a/Slike/notranje_koordinate_tq.tex
+++ b/Slike/notranje_koordinate_tq.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
-	\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/notranje_koordinate_tq.eps}
+	\includegraphics[trim={0 0cm 0 0cm},scale=0.25]{./Slike/notranje_koordinate_tq.png}
 	\caption{Koncept \simulink sheme za vodenje v notranjih koordinatah v navornem na\v{c}inu z dodanim regulatorjem po hitrosti za bolj natan\v{c}no pozicioniranje pred poskusom.}
 	\label{fig:notranje_koordinate_tq}
 \end{figure}
