--- a/Slike/notranje_koordinate_vel.tex
+++ b/Slike/notranje_koordinate_vel.tex
@@ -1,6 +1,6 @@
-\begin{figure}
+\begin{figure}[]
 	\centering
-	\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/notranje_koordinate_vel.eps}
-	\caption{Koncept \simulink sheme za vodenje v notranjih koordinatah v hitrostnem na\v{c}inu.}
+	\includegraphics[trim={0 0cm 0 0cm},scale=0.25]{./Slike/notranje_koordinate_vel.png}
+	\caption{\simulink shema za vodenje v notranjih koordinatah v hitrostnem na\v{c}inu.}
 	\label{fig:notranje_koordinate_vel}
 \end{figure}
