--- a/Slike/simulink-pa-10.tex
+++ b/Slike/simulink-pa-10.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure}[!h]
 	\centering
 	\includegraphics[scale=1]{./Slike/simulink-pa-10.eps}
 	\caption{\simulink blok PA-10 CONTROL za vodenje robota PA-10.}
