Updated table of symbols

--- a/magistrska_timotej_gaspar.tex
+++ b/magistrska_timotej_gaspar.tex
@@ -78,14 +78,24 @@ sila & $F$  & Newton & N \\
 % gostota & $\rho$  & - & kg/m$^3$ \\
 masa telesa  & $m$  & kilogram & kg \\
 % vhodna napestost & $U_\text{vh}$ & volt  & V \\
-kot v sklepu  & $q$  & radijan na sekundo & rad/s \\
+kot v sklepu  & $q$  & radian na sekundo & rad/s \\
+navor v sklepu  & $\tau$  & Newton meter & Nm \\
 lega vrha robota & $\textbf{x}$  & metri & m \\
 Jacobijeva matrika & $\mathbf{J}$  & - & - \\
-Matrika vztrajnosti & $\mathbf{B}$  & - & - \\
-Matrika Coriolisovih in centripetalnih silah & $\mathbf{C}$  & - & - \\
-Vektor gravitacijskih prispevkov & $\mathbf{g}$  & - & - \\
-Jacobijeva matrika & $\mathbf{J}$  & - & - \\
-Vektor sil in navorov $\mathbf{h}$  & Newton in Newton meter & N / Nm \\
+matrika homogenih transformacij & $\mathbf{T}$  & - & - \\
+rotacijska matrika & $\mathbf{R}$  & - & - \\
+matrika vztrajnosti & $\mathbf{B}$  & - & - \\
+matrika Coriolisovih in centripetalnih silah & $\mathbf{C}$  & - & - \\
+vektor gravitacijskih prispevkov & $\mathbf{g}$  & - & - \\
+vektor prispevkov trenja & $\mathbf{F}_f$  & Newton meter & Nm \\
+jacobijeva matrika & $\mathbf{J}$  & - & - \\
+vektor sil in navorov & $\mathbf{h}$  & - & - \\
+proporcionalno ojaèanje & $K_P$  & - & - \\
+diferencirno ojaèanje & $K_D$  & - & - \\
+integrirno ojaèanje & $K_I$  & - & - \\
+regulirni signal & $u$  & - & - \\
+
+
 
   \hline
 \end{tabular}
